# kata-bootstraps

cpp/: CMakeLists.txt
cpp/catch/: CMakeLists.txt
cpp/catch/Tests/: CMakeLists.txt  TestMain.cpp  Test_1.cpp
cpp/cmake/modules/: CppResultType.cmake
cpp/src/: kata.cpp
